# awaitguard

./: .env  .env.example  CLAUDE.md  Dockerfile  README.md  SETUP.md  docker-compose.yml
.claude/: settings.local.json
crates/app/: Cargo.toml
crates/app/migrations/: 0001_init.sql  0002_jobs_dedup_and_schema_cleanup.sql
crates/app/src/: config.rs  main.rs
crates/app/src/analysis/: engine.rs  formatter.rs  mod.rs  patch.rs  scoring.rs
crates/app/src/analysis/detectors/: blocking_in_async.rs  lock_across_await.rs  mod.rs  unbounded_spawn.rs
crates/app/src/analysis/llm/: cache.rs  client.rs  mod.rs  prompt.rs
crates/app/src/github/: auth.rs  client.rs  mod.rs  models.rs
crates/app/src/http/: github_webhook.rs  mod.rs  routes.rs
crates/app/src/observability/: mod.rs
crates/app/src/store/: comments.rs  db.rs  findings.rs  jobs.rs  mod.rs
crates/app/src/worker/: mod.rs  processor.rs  runner.rs  sweeper.rs
fixtures/expected/: blocking_in_async_1.json  lock_across_await_1.json
fixtures/rust/: blocking_in_async_1.rs  lock_across_await_1.rs
