[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "awaitguard"
path = "src/main.rs"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# web
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# http client
reqwest = { version = "0.11", features = ["json"] }

# GitHub JWT auth
jsonwebtoken = "9"

# webhook HMAC-SHA256 signature verification
hmac = "0.12"
sha2 = { version = "0.10", features = ["oid"] }
hex = "0.4"
digest = "0.10"

# error handling
anyhow = "1"
thiserror = "1"

# utilities
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
base64 = "0.21"
regex = "1"
futures = "0.3"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
